--- a/views/post.pug
+++ b/views/post.pug
@@ -12,7 +12,7 @@ block content
     button#upvote.vote.col-4.col-md-2(data-postid=post._id) +#{post.upvotes.length}
     button#downvote.vote.col-4.col-md-2(data-postid=post._id) -#{post.downvotes.length}
     
-    a#next.col-2.ml-auto(href='/') Next
+    a#next.col-4.col-md-2.ml-auto(href='/') Next
       //- i.fa.fa-arrow-right
 
 block portal
