added some popovers

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -63,4 +63,4 @@ html
             button.btn.btn-primary.primary-button(type="submit", form="create-post-form") Submit
 
 
-    script(src='javascripts/script.js')
+    script(src='/javascripts/script.js')
