--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,9 @@ body {
 button:hover{
   cursor: pointer;
 }
+.disallowed:hover{
+  cursor: not-allowed;
+}
 .row{
   margin: 0;
 }
@@ -92,6 +95,7 @@ button:hover{
   color: white;
   font-size: 1.5em;
 }
+
 .vote#upvote{
   background-color: #27ae60;
 }
