fixed some code

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,7 +34,7 @@ html
           div.modal-header
             h4.modal-title Placeholder Title
           div.modal-body
-            form#portal-form(action='/login', method='POST')
+            form#portal-form(action='/placeholder', method='POST')
               div.form-group
                 label.col-form-label(for="username") Username
                 input.form-control#username(type="text", name="username", required=true)
